--- a/app/src/main/res/layout/fragment_userdetails.xml
+++ b/app/src/main/res/layout/fragment_userdetails.xml
@@ -4,30 +4,110 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".userdetails">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Unverified"
+                android:gravity="center"
+                android:textSize="23dp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:id="@+id/l1"
+                android:orientation="horizontal" >
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="5dp"
+                    android:textSize="18dp"
+                    android:text="Items"
+                    android:layout_weight="2" />
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="5dp"
+                    android:textSize="18dp"
+                    android:text="Value"
+                    android:layout_weight="3" />
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="5dp"
+                    android:textSize="18dp"
+                    android:text="Verified"
+                    android:layout_weight="2" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:id="@+id/ll11"
+                    android:layout_weight="2">
 
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:id="@+id/ll12"
+                    android:layout_weight="3">
+
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:id="@+id/ll13"
+                    android:layout_weight="2">
+
+                </LinearLayout>
+            </LinearLayout>
+        </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Verified"
+            android:textSize="23dp"
+            android:layout_marginTop="10dp"
+            android:gravity="center"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:id="@+id/l2"
             android:orientation="horizontal" >
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:paddingLeft="5dp"
                 android:text="Items"
+                android:textSize="18dp"
                 android:layout_weight="2" />
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:paddingLeft="5dp"
+                android:textSize="18dp"
                 android:text="Value"
-                android:layout_weight="2" />
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="Verified"
-                android:layout_weight="1" />
+                android:layout_weight="3" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -37,7 +117,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:id="@+id/ll1"
+                android:id="@+id/ll21"
                 android:layout_weight="2">
 
             </LinearLayout>
@@ -45,19 +125,12 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:id="@+id/ll2"
-                android:layout_weight="2">
-
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:id="@+id/ll3"
-                android:layout_weight="1">
+                android:id="@+id/ll22"
+                android:layout_weight="3">
 
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 
+    </LinearLayout>
 </FrameLayout>
