--- a/app/src/main/res/layout/fragment_on_scan.xml
+++ b/app/src/main/res/layout/fragment_on_scan.xml
@@ -4,14 +4,51 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".on_scan">
+<TextView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="Website: "
 
-   <LinearLayout
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:id="@+id/requesting_data"
-       android:orientation="horizontal"
-       >
+    android:id="@+id/t1"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/l1"
+        android:orientation="vertical"
+        android:layout_marginTop="40dp">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 
-   </LinearLayout>
+<TextView
+    android:layout_width="0dp"
+    android:layout_height="25dp"
+    android:layout_weight="3"
+
+    android:text="Field"
+    />
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="25dp"
+        android:text="Value"
+        android:layout_weight="4"
+        />
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="25dp"
+        android:text="Required"
+        android:layout_weight="2"
+        />
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="25dp"
+        android:layout_weight="2"
+        android:text="Sending"
+        />
+
+</LinearLayout>
+    </LinearLayout>
+
 
 </FrameLayout>
