--- a/app/src/main/res/layout/fragment_userdetails.xml
+++ b/app/src/main/res/layout/fragment_userdetails.xml
@@ -23,7 +23,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="10dp"
-                android:id="@+id/l1"
+                android:id="@+id/l11"
                 android:orientation="horizontal" >
                 <TextView
                     android:layout_width="0dp"
@@ -46,36 +46,19 @@
                     android:textSize="18dp"
                     android:text="Verified"
                     android:layout_weight="2" />
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="5dp"
+                    android:textSize="18dp"
+                    android:text=""
+                    android:layout_weight="2" />
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal" >
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:id="@+id/ll11"
-                    android:layout_weight="2">
-
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:id="@+id/ll12"
-                    android:layout_weight="3">
-
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:id="@+id/ll13"
-                    android:layout_weight="2">
-
-                </LinearLayout>
-            </LinearLayout>
+                android:orientation="vertical"
+                android:id="@+id/l12"/>
         </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -92,7 +75,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="10dp"
-            android:id="@+id/l2"
+            android:id="@+id/l21"
             android:orientation="horizontal" >
             <TextView
                 android:layout_width="0dp"
@@ -108,28 +91,20 @@
                 android:textSize="18dp"
                 android:text="Value"
                 android:layout_weight="3" />
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:paddingLeft="5dp"
+                android:textSize="18dp"
+                android:text=""
+                android:layout_weight="2" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:id="@+id/ll21"
-                android:layout_weight="2">
-
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:id="@+id/ll22"
-                android:layout_weight="3">
-
-            </LinearLayout>
-        </LinearLayout>
+            android:orientation="vertical"
+            android:id="@+id/l22"
+            />
     </LinearLayout>
 
     </LinearLayout>
