--- a/app/src/main/res/layout/fragment_allowed_websites.xml
+++ b/app/src/main/res/layout/fragment_allowed_websites.xml
@@ -3,8 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".user_details_2">
+    tools:context=".allowed_websites">
 
     <!-- TODO: Update blank fragment layout -->
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:id="@+id/rec2"
+        android:layout_height="match_parent"
+
+        />
 
 </FrameLayout>
