--- a/app/src/main/res/layout/website_details.xml
+++ b/app/src/main/res/layout/website_details.xml
@@ -1,60 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="102dp"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     >
     <LinearLayout
     android:layout_width="match_parent"
     android:paddingLeft="10dp"
+        android:orientation="vertical"
     android:paddingTop="10dp"
-    android:layout_height="100dp">
+    android:layout_height="wrap_content">
 
 <LinearLayout
-    android:layout_width="0dp"
-    android:layout_weight="1"
-    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_weight="5"
+    android:orientation="horizontal"
     android:paddingLeft="10dp"
     android:paddingTop="10dp"
-    android:layout_height="100dp">
+    android:layout_height="wrap_content">
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:id="@+id/m1"
-        android:layout_weight="1"
+        android:layout_weight="2"
         android:text="Website Name"/>
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:id="@+id/m2"
-        android:layout_weight="1"
-        android:text="Data Sent"/>
-</LinearLayout>
-    <LinearLayout
+        android:id="@+id/d1"
         android:layout_width="0dp"
-        android:layout_height="100dp"
-        android:paddingLeft="10dp"
-        android:paddingTop="10dp"
-        android:orientation="vertical"
-        android:layout_weight="2">
+        android:layout_height="wrap_content"
+        android:layout_weight="3"
+        android:text="XYZ"
+        android:textColor="@color/ic_launcher_fingerprint_background" />
 
-        <TextView
-            android:id="@+id/d1"
+</LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:text="XYZ"
-            android:textColor="@color/ic_launcher_fingerprint_background" />
+            android:layout_height="wrap_content"
+            android:layout_weight="5"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp">
 
-        <TextView
-            android:id="@+id/d2"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:text="NAME"
-            android:textColor="@color/ic_launcher_background" />
+            <TextView
+                android:id="@+id/m2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:text="Data Sent" />
 
-    </LinearLayout>
+            <LinearLayout
+                android:id="@+id/ll2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:orientation="vertical"
+                android:textColor="@color/ic_launcher_background" />
+
+
+        </LinearLayout>
 
     </LinearLayout>
     <LinearLayout
