--- a/app/src/main/res/layout/website_details.xml
+++ b/app/src/main/res/layout/website_details.xml
@@ -51,7 +51,7 @@
                 android:text="Data Sent" />
 
             <LinearLayout
-                android:id="@+id/ll2"
+                android:id="@+id/llm"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
