--- a/app/src/main/res/menu/home_drawer.xml
+++ b/app/src/main/res/menu/home_drawer.xml
@@ -21,6 +21,10 @@
             android:id="@+id/Showdetails1"
             android:icon="@drawable/ic_menu_gallery"
             android:title="Show allowed Websites"/>
+        <item
+            android:id="@+id/Delete"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="Delete signedup  websites"/>
     </group>
 
 
