--- a/app/src/main/res/layout/fragment_update_field_value.xml
+++ b/app/src/main/res/layout/fragment_update_field_value.xml
@@ -9,27 +9,30 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+        <Spinner
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/spinner"
+            ></Spinner>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
 
             android:orientation="horizontal">
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:gravity="center"
-                android:textSize="25dp"
-                android:layout_weight="2"
-                android:id="@+id/t1"/>
             <EditText
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text=""
-                android:textSize="20dp"
+                android:hint="value"
+                android:gravity="center"
+                android:layout_weight="2"
+                android:id="@+id/value"/>
+            <EditText
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:hint="Expiry Date"
                 android:layout_weight="3"
-                android:id="@+id/e1"/>
+                android:id="@+id/expiry"/>
 
         </LinearLayout>
         <Button
