--- a/app/src/main/res/layout/revert_update_card.xml
+++ b/app/src/main/res/layout/revert_update_card.xml
@@ -2,8 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/border_shadow"
+    android:id="@+id/linearlayout"
     android:layout_margin="5dp"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_marginLeft="10dp"
